clusters/sno/applications/immich/immich-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: immich-server
  template:
    metadata:
      labels:
        app: immich-server
    spec:
      serviceAccountName: immich
      containers:
        - name: immich-server
          image: ghcr.io/immich-app/immich-server:v3.3.1@sha256:db996e352359771c6a3db121a0ed8761516b22f727fc092a0f46dcfef82c1bc1
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
          ports:
            - name: http
              containerPort: 2283
          volumeMounts:
            - name: library
              mountPath: /usr/src/app/upload
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: 2
              memory: 4Gi
          startupProbe:
            httpGet:
              path: /api/server/ping
              port: 2283
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /api/server/ping
              port: 2283
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/server/ping
              port: 2283
            periodSeconds: 30
      volumes:
        - name: library
          persistentVolumeClaim:
            claimName: library-pvc
