clusters/sno/applications/immich/immich-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich
spec:
  type: ClusterIP
  selector:
    app: immich-server
  ports:
    - name: http
      port: 2283
      targetPort: 2283
