clusters/sno/applications/immich/tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-tailscale
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: immich
      port:
        number: 2283
